--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
                 <li><a href = "https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran">About Me</a></li>
             </ul>
         </nav>
+        <h1>Roye Bustan's Personal Portfolio</h1>
     </header>
 
     <main>
-        <h1>Roye Bustan's Personal Portfolio</h1>
+        <section id = "about"></section>
+        <section id = "projects"></section>
+
     </main>
 
 
