--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "./assets/stylesheet.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheet.css" />
     <title>Roye's Portfolio</title>
-</head>
+  </head>
 
-
-
-
-
-
-<body>
-
-
-
-    
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href = "https://github.com/Rbustan0">Github</a> </li>
-                <li><a href = "https://www.linkedin.com/in/roye-bustan-037a5899/">Linked-In</a></li>
-                <li><a href = "https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran">Resume</a></li>
-                <li><a href = "https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran">About Me</a></li>
-            </ul>
-        </nav>
-        <h1>Roye Bustan's Personal Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="https://github.com/Rbustan0">Github</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/roye-bustan-037a5899/"
+              >Linked-In</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran"
+              >Resume</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran"
+              >About Me</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <h1>Roye Bustan's Personal Portfolio</h1>
     </header>
 
     <main>
-        <section id = "about"></section>
-        <section id = "projects"></section>
-
+      <section id="about">
+        <img src="./assets/Roye_Portfolio_img.jpeg" alt="" />
+        <h2>About Me</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </section>
+      <section id="projects"></section>
     </main>
 
-
-
-
-
-
-    <footer>
-
-    </footer>
-
-
-</body>
+    <footer></footer>
+  </body>
 </html>
