moved and stylized image, added about me section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <main>
       <section id="about">
         <img src="./assets/images/Roye_Portfolio_img.jpeg" alt="" />
+        <div id = "about-content">
         <h2>About Me</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -48,6 +49,7 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
+      </div>
       </section>
       <section id="projects"></section>
     </main>
