Included completed projects, made website size friendly, and fixed links and finished designs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             <a href="#about">About me</a>
           </li>
           <li>
-            <a href="projects-title">Projects</a
-            >
+            <a href="#CompProj">Projects</a>
+          </li>
+          <li>
+            <a href="#ContMe">Contact Me</a>
           </li>
         </ul>
       </nav>
@@ -44,9 +46,9 @@
     </section>  
 
 
-        <section class = "projects-title">
-          <h2> Completed Projects </h2>
-          <div class="projects">
+        <section>
+          <h2 id = CompProj> Completed Projects </h2>
+          <div class="container">
             <div class="top-image">
 
             <div class="main-image-card">
@@ -102,7 +104,7 @@
         </section>
 
         <section class = "Contact">
-          <h2>
+          <h2 id = ContMe>
             Contact Me
           </h2>
         <center>
