--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="top-image">
 
             <div class="main-image-card">
-              <h2 class="image-header"> HTML Refactoring Project </h2>
-              <a href = "https://rbustan0.github.io/html-refactoring-challenge/" class="top-image">
-                <img src="./assets/images/rbustan0.github.io_html-refactoring-challenge_.png" alt="first">
+              <h2 class="image-header"> Cant Decide? </h2>
+              <a href = "https://ctvb.github.io/cantdecide/" class="top-image">
+                <img src="./assets/images/cantDecide.jpg" alt="first">
               </a>
             </div>
 
