--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="top-image">
 
             <div class="main-image-card">
-              <h2 class="image-header"> Cant Decide? </h2>
+              <h2 class="image-header"> >Cant Decide? </h2>
               <a href = "https://ctvb.github.io/cantdecide/" class="top-image">
                 <img src="./assets/images/cantDecide.jpg" alt="first">
               </a>
